[project]
name = "fuzzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "black>=25.1.0",
    "makeelf>=0.3.4",
    "pytest>=8.4.0",
    "python-magic>=0.4.27",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
]

[project.scripts]
fuzzywuzzy = 'fuzzer:cli'
harness-bench = 'fuzzer.harness.bench:main'
inprocess-harness-main = 'fuzzer.harness.inprocess:main'

[tool.pytest.ini_options]
pythonpath = "src"      # I hate python.
testpaths = ["tests"]
addopts = "--color=yes"
xfail_strict = true